tests/pos/test000.hs
module Test0 () where

-- import Language.Haskell.Liquid.Prelude
{-@ toss :: Bool @-}
toss :: Bool
toss = (undefined 0) > 10

